# Copyright (C) 2023 Intel Corporation
#
# This software and the related documents are Intel copyrighted materials,
# and your use of them is governed by the express license under which they
# were provided to you ("License"). Unless the License provides otherwise,
# you may not use, modify, copy, publish, distribute, disclose or transmit
# this software or the related documents without Intel's prior written
# permission.
#
# This software and the related documents are provided as is, with no
# express or implied warranties, other than those that are expressly stated
# in the License.

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.21",      # Keep in-sync with `CMakeLists.txt`
    "numpy>=1.10.0, <2",    # Keep in-sync with `setup.py`
    "archspec>=0.2.0",  # Keep in-sync with `setup.py`
    "toml>=0.10.2",     # Keep in-sync with `setup.py` required for the tests
    #"pybind11",        # Installed in CMakeLists.txt
]

build-backend = "setuptools.build_meta"

# CI Build Wheel
[tool.cibuildwheel]
build = "cp*-manylinux_x86_64"
skip = "cp36-manylinux-x86_64"
test-skip = ""

archs = ["x86_64"]
build-frontend = "pip"
config-settings = {}
dependency-versions = "pinned"
environment.CC = "/opt/rh/devtoolset-11/root/usr/bin/cc"
environment.CXX = "/opt/rh/devtoolset-11/root/usr/bin/c++"
# Compile multiple versions for difference microarchitectures
environment.SVS_MULTIARCH = "YES"
environment-pass = []
build-verbosity = "3"

# Run inside the container because the version of pip used depends on the python version
# we're building for.
before-build = "pip install ninja"
before-all = "yum --disablerepo=epel install -y devtoolset-11-gcc devtoolset-11-gcc-c++"
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = []
test-extras = []

container-engine = "docker"

# Requires creation of the `svs-manylinux2014` container image.
# Execute the build script  SVS_ROOT/docker/x86_64/manylinux2014/build.sh
manylinux-x86_64-image = "svs-manylinux2014"
manylinux-pypy_x86_64-image = "svs-manylinux2014"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
