# Copyright 2023 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.21, <5",      # Keep in-sync with `CMakeLists.txt`
    "numpy>=1.10.0, <3",    # Keep in-sync with `setup.py`
    "archspec>=0.2.0",  # Keep in-sync with `setup.py`
    "toml>=0.10.2",     # Keep in-sync with `setup.py` required for the tests
    #"pybind11",        # Installed in CMakeLists.txt
]

build-backend = "setuptools.build_meta"

# CI Build Wheel
[tool.cibuildwheel]
build = "cp*-manylinux_x86_64"
skip = "cp36-manylinux-x86_64"
test-skip = ""

archs = ["x86_64"]
build-frontend = "pip"
config-settings = {}
dependency-versions = "pinned"
environment.CC = "/opt/rh/gcc-toolset-11/root/usr/bin/cc"
environment.CXX = "/opt/rh/gcc-toolset-11/root/usr/bin/c++"
# Compile multiple versions for difference microarchitectures
environment.SVS_MULTIARCH = "YES"
environment-pass = []
build-verbosity = "3"

# Run inside the container because the version of pip used depends on the python version
# we're building for.
before-build = "pip install ninja"
before-all = "yum install -y gcc-toolset-11"
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = []
test-extras = []

container-engine = "docker"

# Requires creation of the `svs-manylinux228` container image.
# Execute: docker build -t svs-manylinux228 SVS_ROOT/docker/x86_64/manylinux228/
manylinux-x86_64-image = "svs-manylinux228"
manylinux-pypy_x86_64-image = "svs-manylinux228"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
